css/index.css
/* Use your own code or past solution for Great Idea Web Page CSS here! */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */
.container {
		border: 1px solid red;
		margin: 30px auto;
        width: 880px;
        /*width: 65%;*/
	}
	.navigation {
		border: 4px solid red;
		display: flex;
		flex-direction: row;
		width: 880px;
		background-color: #00FA9A;
		border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
		position: fixed;
		top: 0;
	}
	.navigation nav {
		border: 4px solid red;
		vertical-align: top;
		margin-top:10px;
        /*width:  666px;*/
        width: 90%;
	}
	
	a {
		margin: 0 25px;
		color: grey;
		/*GET RID OF UNDERLINE*/
	}
	a:hover {
		color: black;
	}
	button:hover {
		 background-color: grey;
	}
	.headerArt {
	/*	border: 4px solid red;*/
		display: flex;
		flex-direction: row;
	/*	margin: 80px 0px;*/
		padding-top: 60px;
		padding-bottom: 80px; 
		justify-content: space-between;
		border-bottom: 1px solid grey;
		width: 870px;
		
	}
	.headerArt h1 {
		
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
	/*	border: 4px solid red;
		vertical-align: top;
		margin-top: 60px;
		margin-bottom: 0px;*/
		text-align: center;
		font-size: 80px;
		width: 470px;
		height: 350px;
	}
	
	button {
		vertical-align: top;
		margin-top: 20px;
		width: 150px;
		height: 25px;
		background-color: white;
		padding: 0px;
		border-right: 1px solid black;
		border-bottom: 1px solid black;
		border-top: 1px solid grey;
		border-left: 1px solid grey;
	}
	
	.midContentSection1 {
		display: flex;
		flex-flow: row-reverse wrap;
	/*	border: 1px solid red;*/
		width: 870px;
		margin: 30px 0px;
		
	}
	.midContentSection1 p {
		order: 1;
	/*	border: 1px solid red;*/
		
		width: 425px;
	}
	.midContentSection1 h3 {
		
	/*	border: 1px solid red;*/
		width: 430px;
	}
	.middle-img {
		 width: 99%;
	}
	.midContentSection2 {
		display: flex;
		flex-flow: row-reverse wrap;
	/*	border: 1px solid red;*/
		width: 870px;
		margin-top: 30px;
		border-bottom: 1px solid grey;
		padding-bottom: 40px;
	}
	
	.midContentSection2 h3, .midContentSection2 p {
		/*border: 1px solid red;*/
		/*display: inline-block;*/
		width: 280px;
	
	}
	.midContentSection2 h3, p {
	  margin-right: 6px;
	}
	/*
	.midContentSection2.p:last-child {
		margin-right: 0px;
	}
	.midContentSection2.h3:last-child {
		margin-right: 0px;
	}
	*/
	.contactSection{
		margin-top: 40px;
		margin-bottom: 50px;
		display: flex;
		flex-flow: column;
	}
	footer {
		  text-align: center;
	}

/*TABLET VIEW CODE*/
@media (max-width: 800px) {
    .container {
        width: 660px;
    }
    .navigation {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 660px;
    }
    .navigation nav {
        width: 660px;
        order: 2;
    }
    .navigation img {
        width: 200px;
        order: 1;
    }
    .headerArt img {
        display: none;
    }

}

